# AoC2022

./: .gitignore  Cargo.toml  Makefile
src/: main.rs
src/day1/: day1.rs
src/day10/: day10.rs
src/day11/: day11.rs
src/day12/: day12.rs
src/day13/: day13.rs  testinput
src/day14/: day14.rs
src/day15/: day15.rs
src/day2/: day2.rs
src/day3/: day3.rs
src/day4/: day4.rs
src/day5/: day5.rs
src/day6/: day6.rs
src/day7/: day7.rs
src/day8/: day8.rs
src/day9/: day9.rs
