[package]
name = "AoC2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.5"
error-chain = "0.12.4"
reqwest = { version = "0.11.13", features = ["blocking"] }
tokio = { version = "1.12.0", features = ["full"] }
scan_fmt = "0.2.6"
regex = "1.7.0"
